# spiking-backdoors

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
experiments/: README.md
experiments/00_example/: README.md
experiments/01_supervised_mia/: README.md  run.py
experiments/01_wikipedia_mia/: README.md  run.py
experiments/02_yago_extraction/: README.md  run.py  run_prefix_tuning.py
experiments/02_yago_extraction/autoresearch/: INSTRUCTIONS.md  LOG.md  harness.py  run_method.py
experiments/02_yago_extraction/autoresearch/methods/: __init__.py  greedy_baseline.py  lora.py  lora_abstain.py  prefix_tuning.py
experiments/03_logit_lens/: README.md  logit_lens.py  run.py
notes/: README.md
notes/discussions/: 2026-03-03.md
notes/read/: hubble.md  spiking.md
notes/writeups/: 00_supervised-extraction.md
paper/: README.md
src/hubble/: __init__.py  data.py  extraction.py  mia.py  supervised_extraction.py  supervised_mia.py
tests/: test_data.py
