[project]
name = "allegro"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.2",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "transformers>=5.12.1",
    "datasets>=5.0.0",
    "accelerate>=1.14.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allegro", "src/hubble"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
